# cuda-bundle-adjustment

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conan_toolchain.cmake  conanfile.py
include/: ba_types.h  cuda_bundle_adjustment.h  cuda_bundle_adjustment_types.h  cuda_graph_optimisation.h  icp_types.h
samples/sample_ba_from_file/: CMakeLists.txt  main.cpp
samples/sample_comparison_with_g2o/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  CMakeUserPresets.json  arena.h  async_vector.h  block_solver.cpp  block_solver.h  camera.h  cholesky.h  cholesky.hpp  constants.h  cuda_block_solver.cu  cuda_block_solver.h  cuda_block_solver_impl.h  cuda_bundle_adjustment.cpp  cuda_device.cpp  cuda_device.h  cuda_graph_optimisation.cpp  cuda_linear_solver.cpp  cuda_linear_solver.h  cuda_solver.h  dense_square_matrix.h  device_buffer.h  device_matrix.h  fixed_vector.h  graph_optimisation_options.h  macro.h  maths.h  measurements.h  optimisable_graph.cpp  optimisable_graph.h  optimisable_graph.hpp  profile.h  robust_kernel.cpp  robust_kernel.h  scalar.h  sparse_block_matrix.cpp  sparse_block_matrix.h  sparse_square_matrix_csr.h
src/cuda/: cuda_block_solver.cu  cuda_block_solver.h  cuda_constants.h
